2008-07-28  Lucian Langa  <lucilanga@gnome.org>

	** See bug #504417

	* bbdb.c: - Preferences window cut off

2008-01-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #496402

	* gaimbuddies.c: (parse_buddy_group), (get_all_blocked),
	(bbdb_get_gaim_buddy_list), (free_gaim_body), (free_buddy_list),
	(parse_buddy_group): Do not synchronize blocked bodies from pidgin.

2008-01-02  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #502914

	* bbdb.c: (enable_toggled_cb): Do not write NULL into gconf.

2007-12-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #391062

	* bbdb.c: (bbdb_open_addressbook): Dont add contacts, if it is enabled
	to do so.

2007-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* bbdb.c: (bbdb_check_gaim_enabled), (source_changed_cb):
	ANSIfication of function declaration.

2007-10-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #417999

	* bbdb.c:
	* gaimbuddies.c:
	Use ESourceComboBox instead of ESourceOptionMenu (deprecated).

2007-10-09  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #437579

	* bbdb.c:
	* gaimbuddies.c:
	Fix various compiler warnings.  Patch from Milan Crha.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	* bbdb.c (bbdb_page_factory):
	Use consistent terminology for mail messages (#480621).

2007-08-24  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #440807

	* bbdb.c: (bbdb_page_factory):
	* gaimbuddies.c: (bbdb_sync_buddy_list_check),
	(bbdb_get_gaim_buddy_list), (get_buddy_icon_from_setting),
	(parse_contact):
	Sync now with Pidgin IM [previously Gaim IM].

2007-08-06  Sankar P  <psankar@novell.com>

	* Committed on behalf of Diego Escalante Urrelo
	<diegoe@gnome.org>

	* bbdb.c: (bbdb_timeout), (bbdb_open_addressbook):
	* gaimbuddies.c: (bbdb_sync_buddy_list_check):
	"Synchronize now" should work even if periodic checking 
	is not enabled.
	Fixes bug #377309

2007-06-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #334140
