@@ -1,3 +1,12 @@
+2008-08-07  Paul Bolle  <pebolle@tiscali.nl>
+
+	** Fixes bug #546785
+
+	* caldav-source.c: (e_plugin_lib_enable): The caldav plugin is noisy
+	when enabled:
+	    "CalDAV Eplugin starting up ..."
+	Make this plugin just as polite as google-account-setup.
+
 2008-07-31  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #545568
