@@ -1,3 +1,12 @@
+2008-08-07  Paul Bolle  <pebolle@tiscali.nl>
+
+	** Fixes bug #546785
+
+	* bbdb.c: (e_plugin_lib_enable): The bbdb plugin is noisy when
+	enabled:
+	    "BBDB spinning up..."
+	Make this plugin just as polite as google-account-setup.
+
 2008-07-28  Lucian Langa  <lucilanga@gnome.org>
 
 	** See bug #504417
